# SessionStreamer

./: .containerignore  .dockerignore  .gitignore  .gitmodules  Containerfile  Dockerfile  LICENSE  cloudbuild.yaml  entrypoint.sh
client/: index.html  index.tsx  package-lock.json  package.json  tailwind.config.js  test.html  tsconfig.json  vite.config.ts
client/client/: index.tsx  package.json  vite.config.ts
client/client/components/: SolidLogViewer.css  SolidLogViewer.tsx
client/client/pages/: session.html
client/client/src/: SessionDetailPage.tsx
client/client/src/pages/: session.css  session.tsx
client/components/: SolidLogViewer.tsx
client/src/: App.tsx  SessionDetailPage.tsx  SessionListPage.tsx  SolidLogViewer.css  SolidLogViewer.tsx  index.css
client/src/auth/: AuthGuard.tsx  AuthService.ts  Callback.tsx  config.ts
client/src/components/common/: Loading.tsx  NotFound.tsx  SolidLogViewer.css  SolidLogViewer.tsx
client/src/hooks/: useSession.ts  useSessionList.ts
client/src/pages/: SessionDetailPage.tsx
client/src/solid_ui/: Checkbox.tsx  accordion.tsx  alert-dialog.tsx  alert.tsx  avatar.tsx  badge-delta.tsx  badge.tsx  bar-list.tsx  breadcrumb.tsx  button.tsx  callout.tsx  card.tsx  carousel.tsx  charts.tsx  combobox.tsx  command.tsx  context-menu.tsx  date-picker.tsx  delta-bar.tsx  dialog.tsx  drawer.tsx  dropdown-menu.tsx  flex.tsx  hover-card.tsx  menubar.tsx  navigation-menu.tsx  number-field.tsx  pagination.tsx  popover.tsx  progress-circle.tsx  progress.tsx  radio-group.tsx  resizable.tsx  select.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  table.tsx  tabs.tsx  (+6 more)
client2/src/: App.tsx  SessionDetailPage.tsx  SolidLogViewer.tsx  index.css
server/: Cargo.toml
server/src/: data_channels.rs  lib.rs  main.rs  path_ext.rs  rest.rs  timestamped_bytes.rs  video_track.rs  webrtc_utils.rs
server/tests/: integration.rs
server/tests/data/: project_authorization.toml
server/tests/data/infernal/2025-05-May-20-Tue--16-10-43--04-10PM--063657/: metadata.json
server/tests/data/testproject/test/: metadata.json
