[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
axum = {  version = "0.8.3", features = ["macros"]}
axum-extra = {version = "0.10.1", features = ["typed-header"]}
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
mp4 = "0.14.0"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1", features = ["sync"] }
tower-http = { version = "0.6.2", features = ["validate-request"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3" }
webrtc = { version = "0.12.0" }
gstreamer = { version = "0.21", features = ["v1_22"] }
gstreamer-app = { version = "0.21", features = ["v1_22"] }
tower = { version = "0.5.2", features = ["util"] }

[dev-dependencies]
axum-test = "17.3.0"
test-log = { version = "0.2.17", features = ["trace"] }

[lib]
doctest=false
test=false

[[bin]]
name="main"
test=false

[lints.rust]
unused_must_use = "forbid"