[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0", features = ["backtrace"] }
axum = { version = "0.8.3", features = ["macros"] }
axum-extra = { version = "0.10.1", features = ["typed-header"] }
clap = { version = "4", features = ["derive"] }
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.44.2", features = ["rt", "sync", "time", "tracing"] }
tower-http = { version = "0.6.2", features = ["fs", "trace", "validate-request"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
webrtc = { path = "../vendor/webrtc/webrtc" }
gstreamer = { version = "0.23.5", features = ["v1_22"] }
gstreamer-app = { version = "0.23.5", features = ["v1_22"] }
futures = "0.3.31"
tokio-stream = { version = "0.1.17", features = ["sync"] }
h264-reader = "0.8.0"
tracing-gstreamer = "0.8.0"
log-panics = { version = "2.1.0", features = ["with-backtrace"] }
tokio-util = "0.7.15"
tracing-stackdriver = "0.10.0"
utf8-read = "0.4.0"
bytes = "1.10.1"
chrono = "0.4.41"
thiserror = "2.0.12"
tower-oauth2-resource-server = "0.4.1"
tower = "0.5.2"

[dev-dependencies]
axum-test = "17.3.0"
tempfile = "3.20.0"

[lib]
doctest = false
test = false

[[bin]]
name = "main"
path = "src/bin/main.rs"
test = false

[lints.rust]
unused_must_use = "forbid"
